# MLScorePredictor

./: .env.example  .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
data/seed/: fixtures_2026.csv  historical_matches.csv  players.csv  rag_documents.csv  recent_team_form.csv  teams.csv
docs/: data_sources.md
mlscorepredictor/: __init__.py  config.py  schemas.py  ui_helpers.py  utils.py
mlscorepredictor/api/: main.py
mlscorepredictor/data/: loaders.py
mlscorepredictor/features/: __init__.py  team_features.py
mlscorepredictor/modeling/: __init__.py  evaluation.py  expected_goals.py  poisson.py  predictor.py  simulation.py
mlscorepredictor/rag/: __init__.py  ingest.py  service.py
scripts/: ingest_rag.py
tests/: test_data_coverage.py  test_poisson.py  test_predictor.py  test_simulation.py
